--- a/Bankable Birthday/Base.lproj/Main.storyboard
+++ b/Bankable Birthday/Base.lproj/Main.storyboard
@@ -14,28 +14,107 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <connections>
+                        <segue destination="TiZ-9T-aS3" kind="relationship" relationship="rootViewController" id="HHf-gf-gH8"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uvc-fj-Qwk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-134" y="329"/>
         </scene>
-        <!--View Controller-->
+        <!--HelpVC-->
         <scene sceneID="biS-bZ-GTJ">
             <objects>
-                <viewController id="TiZ-9T-aS3" sceneMemberID="viewController">
+                <viewController id="TiZ-9T-aS3" customClass="Help_VC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Abe-Xu-J1v"/>
                         <viewControllerLayoutGuide type="bottom" id="aA5-Sj-FcX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="faK-rp-DUo">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" bounces="NO" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hjV-v9-dNo">
+                                <rect key="frame" x="0.0" y="99" width="320" height="301"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="pys-Yk-WxK">
+                                    <size key="itemSize" width="280" height="300"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="TiZ-9T-aS3" id="hYj-xb-Uqh"/>
+                                    <outlet property="delegate" destination="TiZ-9T-aS3" id="fzA-2f-3WB"/>
+                                </connections>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Bankable Birthdays" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sl-mg-7QE">
+                                <rect key="frame" x="20" y="70" width="280" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KBD-Cv-gFU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2TK-X0-lwL">
+                                <rect key="frame" x="114" y="400" width="92" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="aVz-ah-G0v"/>
+                                    <constraint firstAttribute="width" constant="92" id="uYC-lH-6il"/>
+                                </constraints>
+                                <state key="normal" title="Skip">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="skipClicked:" destination="TiZ-9T-aS3" eventType="touchUpInside" id="1kO-Kd-i2e"/>
+                                </connections>
+                            </button>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="6Mh-aK-gTL">
+                                <rect key="frame" x="11" y="380" width="298" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="wga-31-J6A"/>
+                                </constraints>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" red="0.68235294117647061" green="0.22352941176470587" blue="0.55294117647058827" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Mh-aK-gTL" firstAttribute="leading" secondItem="faK-rp-DUo" secondAttribute="leading" constant="11" id="3no-fY-02I"/>
+                            <constraint firstAttribute="trailing" secondItem="hjV-v9-dNo" secondAttribute="trailing" id="8Cb-9i-DT8"/>
+                            <constraint firstItem="2sl-mg-7QE" firstAttribute="leading" secondItem="faK-rp-DUo" secondAttribute="leading" constant="20" id="9uJ-H3-OoO"/>
+                            <constraint firstItem="hjV-v9-dNo" firstAttribute="top" secondItem="2sl-mg-7QE" secondAttribute="bottom" constant="8" id="Amm-ip-2kJ"/>
+                            <constraint firstItem="2TK-X0-lwL" firstAttribute="top" secondItem="6Mh-aK-gTL" secondAttribute="bottom" id="GUA-fj-sa9"/>
+                            <constraint firstItem="aA5-Sj-FcX" firstAttribute="top" secondItem="hjV-v9-dNo" secondAttribute="bottom" constant="50" id="PrX-q4-nut"/>
+                            <constraint firstItem="aA5-Sj-FcX" firstAttribute="top" secondItem="2TK-X0-lwL" secondAttribute="bottom" constant="50" id="UWB-iV-LtA"/>
+                            <constraint firstItem="2TK-X0-lwL" firstAttribute="centerX" secondItem="faK-rp-DUo" secondAttribute="centerX" id="Xcc-Qt-vaV"/>
+                            <constraint firstItem="hjV-v9-dNo" firstAttribute="leading" secondItem="faK-rp-DUo" secondAttribute="leading" id="bG3-E5-Ye7"/>
+                            <constraint firstAttribute="trailing" secondItem="2sl-mg-7QE" secondAttribute="trailing" constant="20" id="bLH-C7-NtT"/>
+                            <constraint firstItem="2sl-mg-7QE" firstAttribute="top" secondItem="Abe-Xu-J1v" secondAttribute="bottom" constant="50" id="ipB-uF-0FB"/>
+                            <constraint firstAttribute="trailing" secondItem="6Mh-aK-gTL" secondAttribute="trailing" constant="11" id="jeG-VP-Yl6"/>
+                            <constraint firstItem="hjV-v9-dNo" firstAttribute="top" secondItem="Abe-Xu-J1v" secondAttribute="bottom" constant="50" id="vuM-Ns-M9Z"/>
+                            <constraint firstItem="2TK-X0-lwL" firstAttribute="top" secondItem="hjV-v9-dNo" secondAttribute="bottom" id="yRz-4S-UKi"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="vuM-Ns-M9Z"/>
+                                <exclude reference="PrX-q4-nut"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="OEm-fN-Miz"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="btnSkip" destination="2TK-X0-lwL" id="jBp-kS-nLf"/>
+                        <outlet property="helpCollectionView" destination="hjV-v9-dNo" id="YdQ-ll-Ob7"/>
+                        <outlet property="pgControl" destination="6Mh-aK-gTL" id="eSm-vP-uPW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iHQ-4d-EWW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="370" y="300"/>
+            <point key="canvasLocation" x="281" y="328"/>
         </scene>
     </scenes>
 </document>
